# bookshelf-api

./: .gitignore  pyproject.toml
bookshelf_api/: app.py
tests/: test_app.py
